--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
